<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/marcarloc_pregunta"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPregunta"
        android:layout_below="@+id/tvPregunta"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="86dp"
        android:onClick="marcarLocalizado"
        android:text="@string/si"
        android:width="100dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="noMarcar"
        android:text="@string/no"
        android:width="100dp" />

</RelativeLayout>